Bug Fix: Arrows were not shown in fade mode because of z-index.

--- a/src/sass/core/object/objects/_track.scss
+++ b/src/sass/core/object/objects/_track.scss
@@ -1,5 +1,7 @@
 .splide {
   &__track {
+    position: relative;
+    z-index: 0;
     overflow: hidden;
   }
 }
